# ta-stream

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/ta_stream/: __init__.py  candle.py  chart.py
src/ta_stream/indicators/: __init__.py  abstract.py  adx.py  atr.py  ema.py  exceptions.py  psar.py  sma.py
tests/: conftest.py
tests/data/: cocoa.csv
tests/unit/: test_candle.py  test_chart.py  test_indicators.py
