[project]
name = "ta-stream"
version = "0.2.2"
description = "Default template for PDM package"
authors = [
    {name = "Andriy Guryev", email = "aguryev@ukr.net"},
]
license = {text = "MIT"}
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.7.2",
    "pre-commit>=4.0.1",
    "mypy>=1.13.0",
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-freezegun>=0.4.2",
]

[tool.pdm.scripts]
lint-all = "pre-commit run --all-files"
lint = "pre-commit run --files"

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle - Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle - Warning
    "UP", # pyupgrade
]
ignore = [
    "B006", # [] as argument defaults
    "B904", # raise exceptions with except
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.pytest.ini_options]
#PDM_IGNORE_SAVED_PYTHON="1"
testpaths = [
    "tests",
]
